--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,7 +41,7 @@ book:
   chapters:
   - index.qmd
   # - chapters/news.qmd
-  # - chapters/contributing.qmd  
+  - chapters/contributing.qmd
   # - chapters/introduction.qmd
   - chapters/whole-game.qmd
   # - part: "Preparation"
